# hw_interview_questions

./: .dir-locals.el  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
rtl/: CMakeLists.txt
rtl/clk_div_by_3/: CMakeLists.txt  README.md  clk_div_by_3.cpp  clk_div_by_3.sv  clk_div_by_3.tcl.in  clk_div_by_3.xdc.in
rtl/count_ones/: CMakeLists.txt  README.md  count_ones.cpp  count_ones.sv
rtl/count_zeros_32/: CMakeLists.txt  count_zeros_32.cpp  count_zeros_32.sv
rtl/detect_sequence/: CMakeLists.txt  detect_sequence.cpp  detect_sequence.sv  detect_sequence.tcl.in  detect_sequence.xdc.in
rtl/div_by_3/: CMakeLists.txt  div_by_3.cpp  div_by_3.sv
rtl/fibonacci/: CMakeLists.txt  fibonacci.cpp  fibonacci.sv
rtl/fifo_async/: CMakeLists.txt  README.md  fifo_async.sv  fifo_async.tcl.in  fifo_async.xdc.in  fifo_async_tb.cpp  fifo_async_tb.h  fifo_async_tb.sv  fifo_async_tb_ports.h
rtl/fifo_multi_push/: CMakeLists.txt  README.md  fifo_multi_push.cpp  fifo_multi_push.sv  fifo_multi_push.tcl.in  fifo_multi_push.xdc.in
rtl/fifo_n/: CMakeLists.txt  README.md  fifo_n.cpp  fifo_n.sv  fifo_n.tcl.in
rtl/fifo_ptr/: CMakeLists.txt  fifo_ptr.cpp  fifo_ptr.sv
rtl/fifo_sr/: CMakeLists.txt  README.md  fifo_sr.cpp  fifo_sr.sv
rtl/fused_multiply_add/: CMakeLists.txt  boothb15r4.sv  fused_multiply_add.cpp  fused_multiply_add.sv
rtl/gates_from_MUX2X1/: CMakeLists.txt  README.md  gates_from_MUX2X1.cpp  gates_from_MUX2X1.sv
rtl/increment/: CMakeLists.txt  README.md  increment.cpp  increment.sv
rtl/latency/: CMakeLists.txt  README.md  latency.cpp  latency.sv  latency.tcl.in  latency.xdc.in
rtl/linked_list_queue/: CMakeLists.txt  dpsram.sv  dpsram_pkg.vh  linked_list_queue.cpp  linked_list_queue.sv  linked_list_queue_cntrl.sv  pd_pkg.vh  spsram.sv  spsram_pkg.vh
rtl/mcp_formulation/: CMakeLists.txt  mcp_formulation.cpp  mcp_formulation.sv  mcp_formulation_c.sv  mcp_formulation_l.sv
rtl/missing_duplicated_word/: CMakeLists.txt  README.md  missing_duplicated_word.cpp  missing_duplicated_word.sv
rtl/multi_counter/: CMakeLists.txt  README.md  multi_counter.cpp  multi_counter.sv  multi_counter_pkg.vh
rtl/multi_counter_variants/: CMakeLists.txt  README.md  multi_counter_variants.cpp  multi_counter_variants.sv  multi_counter_variants.tcl.in  multi_counter_variants.xdc.in  multi_counter_variants_pkg.vh
rtl/multiply_by_21/: CMakeLists.txt  README.md  multiply_by_21.cpp  multiply_by_21.sv
rtl/one_or_two/: CMakeLists.txt  README.md  one_or_two.cpp  (+3 more)
(+47 files in other folders)
