##========================================================================== //
## Copyright (c) 2016, Stephen Henry
## All rights reserved.
##
## Redistribution and use in source and binary forms, with or without
## modification, are permitted provided that the following conditions are met:
##
## * Redistributions of source code must retain the above copyright notice, this
##   list of conditions and the following disclaimer.
##
## * Redistributions in binary form must reproduce the above copyright notice,
##   this list of conditions and the following disclaimer in the documentation
##   and/or other materials provided with the distribution.
##
## THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
## AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
## IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
## ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
## LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
## CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
## SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
## INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
## CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
## ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
## POSSIBILITY OF SUCH DAMAGE.
##========================================================================== //

ADD_SUBDIRECTORY(one_or_two)
ADD_SUBDIRECTORY(latency)
ADD_SUBDIRECTORY(multi_counter)
ADD_SUBDIRECTORY(multi_counter_variants)
ADD_SUBDIRECTORY(gates_from_MUX2X1)
ADD_SUBDIRECTORY(increment)
ADD_SUBDIRECTORY(fifo_async)
ADD_SUBDIRECTORY(fifo_multi_push)
ADD_SUBDIRECTORY(fifo_n)
ADD_SUBDIRECTORY(fifo_sr)
ADD_SUBDIRECTORY(fifo_ptr)
ADD_SUBDIRECTORY(count_ones)
ADD_SUBDIRECTORY(mcp_formulation)
ADD_SUBDIRECTORY(detect_sequence)
ADD_SUBDIRECTORY(vending_machine_fsm)
ADD_SUBDIRECTORY(vending_machine_dp)
ADD_SUBDIRECTORY(clk_div_by_3)
ADD_SUBDIRECTORY(missing_duplicated_word)
ADD_SUBDIRECTORY(multiply_by_21)
ADD_SUBDIRECTORY(sorted_lists)
ADD_SUBDIRECTORY(pipelined_add_constant)
ADD_SUBDIRECTORY(zero_indices_slow)
ADD_SUBDIRECTORY(zero_indices_fast)
ADD_SUBDIRECTORY(count_zeros_32)
ADD_SUBDIRECTORY(div_by_3)
ADD_SUBDIRECTORY(fused_multiply_add)
